Certain Affinity, Inc. Careers - 3D Art Intern. Technology (Fall Internship) - Occasion Brands - Career Page. Bosch Group Internship_Human Resources | SmartRecruiters. Quality Assurance (Fall Internship) - Occasion Brands - Career Page. Product Management (Fall Internship) - Occasion Brands - Career Page. ConsumerTrack  - Jobs: Editorial Content Intern - Apply online. ConsumerTrack  - Jobs: Content Marketing Intern - Apply online. ConsumerTrack  - Jobs: Editorial Content Intern - Apply online. Bosch Group Internship in Engineering | SmartRecruiters. Bosch Group Internship_Human Resources | SmartRecruiters. Social High Rise Social Media Account Specialist Intern - FALL 2019 | SmartRecruiters. Caminar Careers - Mental Health/Clinical Intern. Job @ Batmaid.ch (Lausanne): Legal Intern (August ... | JOIN. Single Grain - Jobs: Business Development Intern to Hire (Paid) - Apply online. Single Grain - Jobs: Digital Media Intern to Hire (Paid) - Apply online. Bynder Online Marketing Internship - Dutch Native Speaker | SmartRecruiters. Bynder Online Marketing Internship - Italian Native Speaker | SmartRecruiters. Samsung Semiconductor, Inc. Careers - Computer Vision/Deep Learning Software Engineer Intern. HelpSystems Careers - Sales Intern/Trainee. Nutanix Careers - HR Compensation Intern (Fall Internship). Nutanix Careers - Systems Reliability Engineer - Summer Internship 2019-2020. BCW APAC - Jobs: Graphic design Intern - Apply online. BCW APAC - Jobs: Public Relations Intern - Apply online. Web Software Engineering Intern - Fall 2019 - RubensteinTech - Career Page. Samsung Semiconductor, Inc. Careers - Computer Vision/Deep Learning Software Engineer Intern. Kingland Systems Careers - HR Recruiting/Event Coordinator Advanced Intern.       360 Photography Intern - INDG     .       360 Photography Intern - INDG     . Job Application for Photo Editor Intern at Neighborhoods.com. Editorial Intern | Noodle.com - The Noodle Companies - Career Page. Job Application for Business De

--- a/internship.html
+++ b/internship.html
@@ -41,24 +41,44 @@
   
     <div class="container">
 <!--Begin body here --> 
-<h5><a href='https://consumertrack.workable.com/j/13A77CFD7F'>ConsumerTrack  - Jobs: Editorial Content Intern - Apply online</a></h5> 
+<h5><a href='http://jobs.jobvite.com/certainaffinity/job/ouSy9fwN'>Certain Affinity, Inc. Careers - 3D Art Intern</a></h5> 
 <p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-29</p>
+<hr/>
+<h5><a href='http://occasionbrands.applytojob.com/apply/WIQyBtI59n/Technology-Fall-Internship'>Technology (Fall Internship) - Occasion Brands - Career Page</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-29</p>
+<hr/>
+<h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999692432827-internship-human-resources'>Bosch Group Internship_Human Resources | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-29</p>
+<hr/>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://occasionbrands.applytojob.com/apply/fuZVNTzYQW/Quality-Assurance-Fall-Internship'>Quality Assurance (Fall Internship) - Occasion Brands - Career Page</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-29</p>
+<hr/>
+<h5><a href='http://occasionbrands.applytojob.com/apply/0Q7yUQPOFD/Product-Management-Fall-Internship'>Product Management (Fall Internship) - Occasion Brands - Career Page</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-29</p>
+<hr/>
+<h5><a href='https://consumertrack.workable.com/j/13A77CFD7F'>ConsumerTrack  - Jobs: Editorial Content Intern - Apply online</a></h5> 
+<p><span class="badge badge-light">California, United States New York</span></p>
 <p>Posted on: 2019-07-29</p>
 <hr/>
 <h5><a href='https://consumertrack.workable.com/j/C4E5407537'>ConsumerTrack  - Jobs: Content Marketing Intern - Apply online</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">California, United States New York</span></p>
 <p>Posted on: 2019-07-29</p>
 <hr/>
 <h5><a href='https://consumertrack.workable.com/j/E88FE580E7'>ConsumerTrack  - Jobs: Editorial Content Intern - Apply online</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">California, United States New York</span></p>
 <p>Posted on: 2019-07-29</p>
 <hr/>
 <h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999692430093-internship-in-engineering'>Bosch Group Internship in Engineering | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Malaysia</span></p>
 <p>Posted on: 2019-07-29</p>
 <hr/>
 <h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999692430220-internship-human-resources'>Bosch Group Internship_Human Resources | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Selangor, Malaysia</span></p>
 <p>Posted on: 2019-07-29</p>
 <hr/>
 <h5><a href='https://jobs.smartrecruiters.com/SocialHighRise/743999692431769-social-media-account-specialist-intern-fall-2019'>Social High Rise Social Media Account Specialist Intern - FALL 2019 | SmartRecruiters</a></h5> 
@@ -66,7 +86,7 @@
 <p>Posted on: 2019-07-29</p>
 <hr/>
 <h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qVHaVfwr&k=Job&j=ovCAafwB&__jvst=Employee+Referral&__jvsd=shJxOhw7&__jvsc=Twitter&bid=noqBWLwB'>Caminar Careers - Mental Health/Clinical Intern</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">San Mateo California</span></p>
 <p>Posted on:: 2019-07-29</p>
 <hr/>
 <h5><a href='https://batmaid.join.com/jobs/271193-legal-intern-august-september'>Job @ Batmaid.ch (Lausanne): Legal Intern (August ... | JOIN</a></h5> 
@@ -125,7 +145,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://indg.recruitee.com/o/360-photography-intern'>
+<h5><a href='https://indg.recruitee.com/o/360-photography-intern'>
       360 Photography Intern - INDG
     </a></h5> 
 <p><span class="badge badge-light">Amsterdam, Netherlands</span></p>
@@ -145,7 +165,7 @@
 <p><span class="badge badge-light">Boston, MA</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/consensys/jobs/1796281'>Job Application for Business Development Intern at Consensys</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/consensys/jobs/1796281'>Job Application for Business Development Intern at Consensys</a></h5> 
 <p><span class="badge badge-light">Hong Kong</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -185,7 +205,7 @@
 <p><span class="badge badge-light">Selangor, Malaysia</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/SeekaTechnology/743999692284380-content-writer-internship'>Seeka Technology Content Writer Internship | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/SeekaTechnology/743999692284380-content-writer-internship'>Seeka Technology Content Writer Internship | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Selangor, Malaysia</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -196,6 +216,10 @@
 <h5><a href='https://jobs.smartrecruiters.com/SeekaTechnology/743999692348777-it-web-design-app-developer-internship'>Seeka Technology IT / Web Design / App Developer Internship | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Selangor, Malaysia</span></p>
 <p>Posted on: 2019-07-28</p>
+<hr/>
+<h5><a href='https://workable.com/j/CB33EC8FD4'>Printec - Jobs: Intern Customer Service Technician - Zadar - Apply ...</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Jul 15, 2019 ... Apply online for the job of Intern Customer Service Technician - Zadar at Printec.</p>
 <hr/>
 <h5><a href='https://jobs.smartrecruiters.com/CuriocityGroupInc/743999687874339-video-host-intern'>Curiocity Group Inc. Video Host Intern | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Calgary, AB Canada</span></p>
@@ -320,7 +344,7 @@ at least 85% of coursework towards a college degree, focusing on Graphic?...</p>
 <p><span class="badge badge-light">Lagos, Nigeria</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://tmmc.recruiterbox.com/jobs/fk031qi'>
+<h5><a href='http://tmmc.recruiterbox.com/jobs/fk031qi'>
     Social Media Intern - Fall 2019 at The Marine Mammal Center
 </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -346,7 +370,7 @@ every?...</p>
 <p><span class="badge badge-light">New York New York</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers.peopleclick.com/careerscp/client_iata/external/en_US/jobDetails.do?functionName=getJobDetail&jobPostId=12665&localeCode=en-us'>- Bilingual Intern, Reception and Administration - Montreal NA NA</a></h5> 
+<h5><a href='https://careers.peopleclick.com/careerscp/client_iata/external/en_US/jobDetails.do?functionName=getJobDetail&jobPostId=12665&localeCode=en-us'>- Bilingual Intern, Reception and Administration - Montreal NA NA</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 19, 2019 ... ... Canada, Montreal; Business Analyst and Data Modeler for Airline Standards, 
 Canada, Montreal; Head of Engineering and maintenance, Canada, Montreal?...</p>
@@ -373,7 +397,7 @@ breeding. Therefore, we are building the technology to understand and optimize
 <p><span class="badge badge-light">Washington, District of Columbia</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='https://activision.referrals.selectminds.com/jobs/business-intelligence-intern-4033'>Business Intelligence Intern -  Activision Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://activision.referrals.selectminds.com/jobs/business-intelligence-intern-4033'>Business Intelligence Intern -  Activision Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -391,7 +415,7 @@ quality?...</p>
 <p><span class="badge badge-light">Singapore Singapore</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/nicesystems/job/o8qCafw4'>NICE Careers - Marketing Intern</a></h5> 
+<h5><a href='http://jobs.jobvite.com/nicesystems/job/o8qCafw4'>NICE Careers - Marketing Intern</a></h5> 
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -403,7 +427,7 @@ quality?...</p>
 <p><span class="badge badge-light">Mexico</span></p>
 <p>Posted on:: 2019-07-27</p>
 <hr/>
-<h5><a href='https://huttonconstructioncorp.recruitee.com/o/internshipseasonal-craft-labor'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://huttonconstructioncorp.recruitee.com/o/internshipseasonal-craft-labor'>
       *Internship/Seasonal Craft Labor - Hutton Corporation
     </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -421,7 +445,7 @@ quality?...</p>
 <p><span class="badge badge-light">Paris France</span></p>
 <p>Posted on:: 2019-07-27</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/voltacharging/6362cdc9-d254-48ec-8c68-b336b1c0e8e2'>Volta Charging - Business Operations Intern</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/voltacharging/6362cdc9-d254-48ec-8c68-b336b1c0e8e2'>Volta Charging - Business Operations Intern</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -445,33 +469,7 @@ quality?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://itron.referrals.selectminds.com/jobs/r-d-intern-hardware-design-engineering-2679'>R/D Intern - Hardware Design Engineering - Itron Careers</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-07-27</p>
-<hr/>
-<h5><a href='http://jobs.jobvite.com/gpc/job/oy4Eafwa'>Genuine Parts Company Careers - Digital Intern, Engineering</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-07-27</p>
-<hr/>
-<h5><a href='https://lovecrafts.recruiterbox.com/jobs/fk03f1w/'>
-    Content Coordinator - Internship at LoveCrafts
-</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-07-27</p>
-<hr/>
-<h5><a href='https://ajg.referrals.selectminds.com/jobs/internship-self-insurance-claims-officer-18163'>Internship - Self Insurance Claims Officer - Gallagher Careers</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-07-27</p>
-<hr/>
-<h5><a href='https://jobs.lever.co/instructure/a1ebe780-a72d-43aa-a468-f7530b5ef989'>Instructure - Marketing Intern</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-07-27</p>
-<hr/>
-<h5><a href='http://unitednationsfoundation.applytojob.com/apply/04MCo0odNZ/Intern-Policy-Planning'>Intern, Policy Planning - United Nations Foundation - Career Page</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-07-27</p>
-<hr/>
-<h5><a href='http://unitednationsfoundation.applytojob.com/apply/NupbTtsuto/Intern-Family-Planning-2020'>Intern, Family Planning 2020 - United Nations Foundation - Career Page</a></h5> 
+<h5><a href='https://itron.referrals.selectminds.com/jobs/r-d-intern-hardware-design-engineering-2679'>R/D Intern - Hardware Design Engineering - Itron Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
