Job Application for Data Analyst Working Student (f/m/div) at solarisBank AG at solarisBank. Mobify - Data Analyst (Maternity Leave Contract). Credigy - Senior Statistican. Publicis Groupe Data Analyst | SmartRecruiters. Ordermark - Associate Data Analyst. Datacom - DevOps Analyst/Consultant. Datacom - Digital Business Analyst. Datacom - Desktop Support Analyst - Contract. EverCompliant - Data Analyst, Data Team.     Data Analyst at DocsApp . Junior Data Analyst - Experian Careers. Biffa Waste Services - Jobs: HR Data & Service Analyst - Apply online. Research Data Analyst - CBRE Careers. Adevinta Data Analyst | SmartRecruiters. Adevinta Senior Data Analyst | SmartRecruiters. Wish - Data Analyst. Statistics & Data Corporation (SDC) - Jobs: Senior Quality Assurance Specialist - Apply online. Statistics & Data Corporation (SDC) - Jobs: Biostatistician - Apply online. Statistics & Data Corporation (SDC) - Jobs: Clinical Data Analyst - Apply online. Job Application for Data Analyst at Yext. Looker - Data Analyst, Enterprise Programs. PayFit - Data Analyst.       Data Analyst: Operations - TeeTurtle     . Bill.com - Finance Data Analyst. Scopely - Lead Game Data Analyst. Ellie Mae - Corporate Data Analyst 190342. Assistant Scientist - Data Review Analyst - Vaccines Team - PPD Careers. Clinical Data Analyst | GENESYS Consulting Services, Inc.. Job Application for Senior Data Analyst at Harry's. Job Application for Senior Data Analyst (Inventory) at Myntra Jabong. Job Application for Data Analyst at Gallery Media Group. Job Application for Data Analytics - Senior Analyst at Unqork. Lamudi - Senior Data Analyst. Lamudi - Data Analyst. Job Application for Quantitative Trading & Data Analyst at DRW . Data Analyst. MÉXICO - Financial Senior Data Analyst - Linio - Career Page. Kandidate - Jobs: Data & Growth Analyst (1500-2000 EUR) - Apply online. Data Analyst / Data Scientist | Internship | Tech-Savvy. Job Application for Talent Management Data Analyst at Agoda. Data Analyst -

--- a/data-analyst.html
+++ b/data-analyst.html
@@ -71,7 +71,7 @@
 <p><span class="badge badge-light">Kuala Lumpur</span></p>
 <p>Posted on: 2019-07-29</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/datacom.co.nz/ec0d8415-86d0-4f52-85c3-789a23f9d5f8'>Datacom - Digital Business Analyst</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/datacom.co.nz/ec0d8415-86d0-4f52-85c3-789a23f9d5f8'>Datacom - Digital Business Analyst</a></h5> 
 <p><span class="badge badge-light">Kuala Lumpur</span></p>
 <p>Posted on: 2019-07-29</p>
 <hr/>
@@ -79,7 +79,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/evercompliant/3959133e-0138-4b86-a852-e03ac6d76a1c'>EverCompliant - Data Analyst, Data Team</a></h5> 
+<h5><a href='https://jobs.lever.co/evercompliant/3959133e-0138-4b86-a852-e03ac6d76a1c'>EverCompliant - Data Analyst, Data Team</a></h5> 
 <p><span class="badge badge-light">Tel Aviv</span></p>
 <p>Posted on: 2019-07-29</p>
 <hr/>
@@ -105,15 +105,15 @@
 <p><span class="badge badge-light">Wien, Austria</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Adevinta/743999692421239-senior-data-analyst'>Adevinta Senior Data Analyst | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Adevinta/743999692421239-senior-data-analyst'>Adevinta Senior Data Analyst | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Wien, Austria</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/wish/405759a9-964f-4ca1-97aa-0485c84819a6'>Wish - Data Analyst</a></h5> 
+<h5><a href='https://jobs.lever.co/wish/405759a9-964f-4ca1-97aa-0485c84819a6'>Wish - Data Analyst</a></h5> 
 <p><span class="badge badge-light">Toronto, Canada</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<h5><a href='https://statistics-and-data-corporation-sdc.workable.com/j/26E0671B9A'>Statistics & Data Corporation (SDC) - Jobs: Senior Quality Assurance Specialist - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://statistics-and-data-corporation-sdc.workable.com/j/26E0671B9A'>Statistics & Data Corporation (SDC) - Jobs: Senior Quality Assurance Specialist - Apply online</a></h5> 
 <p><span class="badge badge-light">Tempe, Arizona</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -121,7 +121,7 @@
 <p><span class="badge badge-light">Tempe, Arizona</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<h5><a href='https://statistics-and-data-corporation-sdc.workable.com/j/E37DF8FE70'>Statistics & Data Corporation (SDC) - Jobs: Clinical Data Analyst - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://statistics-and-data-corporation-sdc.workable.com/j/E37DF8FE70'>Statistics & Data Corporation (SDC) - Jobs: Clinical Data Analyst - Apply online</a></h5> 
 <p><span class="badge badge-light">Tempe, Arizona</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -148,11 +148,16 @@
 <p>5 days ago ... Bill.com is a leader in financial process automation for small businesses and mid-
 size companies. Making it simple to connect and do business, the Bill.com?...</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/scopely/4e747b47-8083-4ed1-bbfb-f4764ba175d0'>Scopely - Lead Game Data Analyst</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/scopely/4e747b47-8083-4ed1-bbfb-f4764ba175d0'>Scopely - Lead Game Data Analyst</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>1 day ago ... Are you a Data Analyst experienced with SQL and Tableau interested in 
 impacting business decisions with data-driven insights and recommendations? 
 Are you?...</p>
+<hr/>
+<h5><a href='https://jobs.lever.co/elliemae/65518d33-120e-4783-91a0-60f027357761'>Ellie Mae - Corporate Data Analyst 190342</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Jul 21, 2019 ... Corporate Data Analyst 190342. Pleasanton, CA. Marketing ? Corporate Strategy
+. Full time. Apply for this job. Ellie Mae (NYSE:ELLI) is the leading cloud-based?...</p>
 <hr/>
 <h5><a href='https://ppdi.referrals.selectminds.com/jobs/assistant-scientist-data-review-analyst-vaccines-team-3494'>Assistant Scientist - Data Review Analyst - Vaccines Team - PPD Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -221,7 +226,7 @@ Full time. Apply Now. Job role: As a data analyst, you will be responsible for?.
 <p>3 days ago ... We are looking for a passionate Data Analyst. The successful candidate will turn 
 data into information, information into insight and insight into business?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://kandidate.workable.com/j/755DAD07A1?viewed=true'>Data & Growth Analyst (1500-2000 EUR) - Apply ... - Kandidate - Jobs</a></h5> 
+<h5><a href='https://kandidate.workable.com/j/755DAD07A1?viewed=true'>Data & Growth Analyst (1500-2000 EUR) - Apply ... - Kandidate - Jobs</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>3 days ago ... Apply online for the job of Data & Growth Analyst (1500-2000 EUR) at Kandidate.</p>
 <hr/>
@@ -249,7 +254,7 @@ data into information, information into insight and insight into business?...</p
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://incresearch.referrals.selectminds.com/jobs/principal-biostatistician-30238'>Principal Biostatistician - Syneos Health Careers</a></h5> 
+<h5><a href='https://incresearch.referrals.selectminds.com/jobs/principal-biostatistician-30238'>Principal Biostatistician - Syneos Health Careers</a></h5> 
 <p><span class="badge badge-light">North America</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -305,7 +310,7 @@ mobile studio, HARDlight. As part of the studio's Live Operations team, you woul
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/cision-emia/job/ozD79fwc'>Cision EMIA Careers - Data Analyst</a></h5> 
+<h5><a href='https://jobs.jobvite.com/cision-emia/job/ozD79fwc'>Cision EMIA Careers - Data Analyst</a></h5> 
 <p><span class="badge badge-light">London London</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -338,7 +343,7 @@ targets and schedules. Building dashboards within Google Data Studio so our?...<
 <p><span class="badge badge-light">New York New York</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999692370321-praktikant-in-im-bereich-hochautomatisiertes-fahren-machine-learning-data-analysis'>Bosch Group Praktikant*in im Bereich hochautomatisiertes Fahren - Machine Learning / Data-Analysis | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999692370321-praktikant-in-im-bereich-hochautomatisiertes-fahren-machine-learning-data-analysis'>Bosch Group Praktikant*in im Bereich hochautomatisiertes Fahren - Machine Learning / Data-Analysis | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -393,7 +398,7 @@ deriving value from sparse data to auction theory and game theory all with the?.
 <p><span class="badge badge-light">San Diego, CA</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://ppdi.referrals.selectminds.com/jobs/principal-biostatistician-3469'>Principal Biostatistician - PPD Careers</a></h5> 
+<h5><a href='https://ppdi.referrals.selectminds.com/jobs/principal-biostatistician-3469'>Principal Biostatistician - PPD Careers</a></h5> 
 <p><span class="badge badge-light">North Carolina, United States</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -421,7 +426,7 @@ deriving value from sparse data to auction theory and game theory all with the?.
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-07-26</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qngaVfws&k=Job&j=oyrAafwt&__jvst=Employee+Referral&__jvsd=s8eovhw1&__jvsc=Twitter&bid=n0QNUKwM'>Premier Research Careers - Principal Biostatistical Programmer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qngaVfws&k=Job&j=oyrAafwt&__jvst=Employee+Referral&__jvsd=s8eovhw1&__jvsc=Twitter&bid=n0QNUKwM'>Premier Research Careers - Principal Biostatistical Programmer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-07-26</p>
 <hr/>
@@ -479,12 +484,6 @@ responsible?...</p>
 <p>Jul 16, 2019 ... We're looking for an all-star Data Analyst to join the team. As Lively's first data 
 hire, you'll be responsible for data needs throughout the organization. You'll build
 ?...</p>
-<hr/>
-<h5><a href='https://boards.greenhouse.io/ignitionone/jobs/1787599'>Job Application for Data Analyst at IgnitionOne</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>4 days ago ... Derive actionable insights from massive data sets with limited oversight; 
-Automate quarterly insights across native / partner channels for external facing 
-analyst?...</p>
 <hr/>
 
 
